# Voxel

./: CMakeLists.txt  LICENSE  README.md
bindings/: voxel_bindings.cpp  voxel_c.cpp  voxel_c.h  voxel_data.py  voxel_market.py  voxel_query.py  voxel_sql.py  voxel_stream.py
bindings/go/: go.mod  voxel.go
bindings/go/example/: main.go
bindings/java/: VoxelBench.java  VoxelVM.java
docs/: Architecture.md  Benchmarks.md  Build.md  Bytecode.md  Interpreter.md  JIT.md  README.md
examples/: c_test.cpp  demo.cpp  demo.py  jit_test.cpp  taxi_bench.py  test_suite.cpp  validate.cpp
include/voxel/: voxel.hpp
include/voxel/bytecode/: assembler.hpp  disassembler.hpp  instruction.hpp  opcodes.hpp  verifier.hpp
include/voxel/codegen/: arm64.hpp  jit.hpp  x86_64.hpp
include/voxel/core/: arena.hpp  chunked.hpp  platform.hpp  registers.hpp  types.hpp
include/voxel/data/: block.hpp  encoding.hpp  mmap_segment.hpp  nulls.hpp  segment.hpp
include/voxel/exec/: engine.hpp  optimizer.hpp  streaming.hpp
include/voxel/ops/: aggregate.hpp  filter.hpp  hash.hpp  join.hpp  sort.hpp
include/voxel/simd/: avx512.hpp  neon.hpp  scalar.hpp  x86.hpp
include/voxel/system/: debug.hpp  error.hpp  profile.hpp  telemetry.hpp
include/voxel/util/: bit.hpp  hash.hpp  math.hpp  string.hpp  thread.hpp
